<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2_blur">

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/icon"
        android:padding="8dp"
        tools:ignore="contentDescription"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/copyRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/copy_right_copy"
        android:typeface="monospace"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="#757575"
        android:textColor="#FFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/copyRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_icon"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:background="@drawable/a"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="29sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="#e8eaf6" />

            <TextView
                android:id="@+id/text_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:background="@drawable/a"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/rate"
                android:textColor="#ffb74d"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:background="@drawable/a"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/contact_us"
                android:textColor="#82b1ff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:background="@drawable/a"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/developer_mahdi_malvandi"
                android:textColor="#e0f7fa"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>