<?xml version="1.0" encoding="utf-8"?>
<!-- File created by SkillsOn -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:layout_margin="0dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/timerAnim"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_timer"
        app:lottie_fileName="moving_eye.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"/>

    <!--TODO: add a better icon for notification-->
    <!--TODO : add style-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/text_timer"
        android:layout_below="@+id/timerAnim"
        android:layout_centerHorizontal="true"/>

    <!--TODO : add style-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/time_past_text"
        android:id="@+id/textView"
        android:layout_below="@+id/text_timer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <!--Just a line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_margin="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_skip"
        android:id="@+id/view"/>

    <!--SKIP-->
    <Button
        android:id="@+id/text_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:onClick="onSkipPressed"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>