<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity"
    android:background="@drawable/bg1_blur">

    <ImageView
        android:layout_width="@dimen/splash_pic_size"
        android:layout_height="@dimen/splash_pic_size"
        android:src="@drawable/icon"
        android:layout_margin="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="contentDescription"
        android:id="@+id/imageView3"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        app:lottie_fileName="drop_loading.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_width="120dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="@dimen/splash_name_size" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="#d7ccc8" />

        <TextView
            android:id="@+id/yearOfProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="#e0e0e0" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
